access contrast error social fix

--- a/style.css
+++ b/style.css
@@ -705,7 +705,7 @@ p {
 
 .social {
   max-width: 400px;
-  margin: auto auto auto auto;
+  margin: auto auto 50px auto;
 }
 
 h2 {
